--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,5 +5,122 @@
 }
 
 body {
-  background-color: azure;
+  background-color: rgba(18, 24, 25, 0.689);
+  font-family: sans-serif;
+}
+
+main {
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.form-holder {
+  transform: skewX(-35deg);
+  width: 60%;
+  height: 60px;
+  background-color: transparent;
+  border: 2px solid #fff;
+  
+  form {
+    width: 100%;
+    display: flex;
+    height: 100%;
+
+    .input-holder {
+      width: 70%;
+      display: inline-block;
+      height: 100%;
+      overflow-x: hidden;
+      position: relative;
+
+      input {
+        display: block;
+        width: 140%;
+        transform: skewX(35deg);
+        margin-left: -20%;
+        padding-left: 24%;
+        border: none;
+        outline: none;
+        background: transparent;
+        height: 100%;
+        background-color: rgba(224, 242, 236, 0.509);
+      }
+
+      label {
+        position: absolute;
+        top: 20px;
+        left: 4%;
+        transform: skewX(35deg);
+        pointer-events: none;
+        opacity: 0.3;
+      }
+    }
+
+    .button-holder {
+      width: 30%;
+      display: inline-block;
+      overflow-x: hidden;
+      border-left: 3px solid #fff;
+
+
+      input {
+        transform: skewX(35deg);
+        width: 140%;
+        height: 100%;
+        background: red;
+        border: none;
+        outline: none;
+        margin-left: -20%;
+        color: #fff;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-size: 0.9rem;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+
+@media (max-width: 600px) {
+  .form-holder {
+    transform: skewX(0);
+
+    form {
+      .input-holder {
+        transform: skewX(0);
+        input {
+          transform: skewX(0);
+          width: 100%;
+          margin-left: 0;
+          padding-left: 4%;
+        }
+  
+        label {
+          transform: skewX(0);
+        }
+      }
+
+      .button-holder {
+        transform: skewX(0);
+  
+        > input {
+          transform: skewX(0);
+          width: 100%;
+          height: 100%;
+          margin-left: 0;
+          font-size: 0.8rem;
+        }
+      }
+    }
+  }
 }
