dev changed label behavior

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -63,6 +63,10 @@ main {
         pointer-events: none;
         opacity: 0.3;
       }
+
+      .hidden {
+        opacity: 0;
+      }
     }
 
     .button-holder {
