--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -77,8 +77,7 @@ main {
       overflow-x: hidden;
       border-left: 3px solid #fff;
 
-
-      input {
+      button {
         transform: skewX(35deg);
         width: 140%;
         height: 100%;
@@ -89,8 +88,26 @@ main {
         color: #fff;
         text-transform: uppercase;
         letter-spacing: 0.1em;
-        font-size: 0.9rem;
+        font-size: 14px;
         cursor: pointer;
+        padding: 10px;
+        min-width: fit-content;
+
+        .icon {
+          animation-name: spin;
+          animation-duration: 5000ms;
+          animation-iteration-count: infinite;
+          animation-timing-function: linear; 
+        }
+
+        @keyframes spin {
+          from {
+              transform:rotate(0deg);
+          }
+          to {
+              transform:rotate(360deg);
+          }
+        }
       }
     }
   }
@@ -146,12 +163,44 @@ main {
       .button-holder {
         transform: skewX(0);
   
-        > input {
+        > button {
           transform: skewX(0);
           width: 100%;
           height: 100%;
           margin-left: 0;
-          font-size: 0.8rem;
+          font-size: 12px;
+        }
+      }
+    }
+  }
+
+  .messages {
+    width: 90%;
+    
+    p {
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .container {
+    width: 100%;
+  }
+
+  .form-holder {
+    transform: skewX(0);
+    width: 90%;
+
+    form {
+      .input-holder {
+        width: 60%;
+      }
+
+      .button-holder {
+        width: 40%;
+        > button {
+          font-size: 10px;
         }
       }
     }
